<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/top_blank"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3" >

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/ron_btn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:contentDescription="@string/desc"
            android:gravity="center"
            android:text="@string/pre_result_setting_ron"
            android:textColor="#202020"
            android:textSize="60sp" />

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/tsu_btn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:contentDescription="@string/desc"
            android:gravity="center"
            android:text="@string/pre_result_setting_tsumo"
            android:textColor="#202020"
            android:textSize="60sp" />

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_blank"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

</LinearLayout>